<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_contact">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll"
        android:paddingBottom="45dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <!-- Contact numéro 1 -->
    <LinearLayout
        android:id="@+id/LL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp">
        <FrameLayout
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:background="@color/white">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/ButContact1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/ImageViewContent"
                android:src="@drawable/ic_baseline_settings_phone"
                app:tint="?attr/colorPrimary"
                app:backgroundTint="@color/blue_spot4"/>
        </FrameLayout>
        <TextView
            android:id="@+id/TexContact1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:adjustViewBounds="true"
            android:textAlignment="gravity"
            android:paddingHorizontal="15dp"
            android:paddingVertical="8dp"
            android:background="@color/white"
            android:text="@string/Contact1"
            android:textColor="#112233"
            android:textSize="15sp" />
    </LinearLayout>
        <!-- Contact numéro 2 -->
        <LinearLayout
            android:id="@+id/LL2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">
            <FrameLayout
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:background="@color/white">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/ButContact2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/ImageViewContent"
                    android:src="@drawable/ic_baseline_settings_phone"
                    app:tint="?attr/colorPrimary"
                    app:backgroundTint="@color/blue_spot4"/>
            </FrameLayout>
            <TextView
                android:id="@+id/TexContact2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:adjustViewBounds="true"
                android:textAlignment="gravity"
                android:paddingHorizontal="15dp"
                android:paddingVertical="8dp"
                android:background="@color/white"
                android:text="@string/Contact2"
                android:textColor="#112233"
                android:textSize="15sp" />
        </LinearLayout>
        <!-- Contact numéro 3 -->
        <LinearLayout
            android:id="@+id/LL3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">
            <FrameLayout
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:background="@color/white">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/ButContact3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/ImageViewContent"
                    android:src="@drawable/ic_baseline_settings_phone"
                    app:tint="?attr/colorPrimary"
                    app:backgroundTint="@color/blue_spot4"/>
            </FrameLayout>
            <TextView
                android:id="@+id/TexContact3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:adjustViewBounds="true"
                android:textAlignment="gravity"
                android:paddingHorizontal="15dp"
                android:paddingVertical="8dp"
                android:background="@color/white"
                android:text="@string/Contact3"
                android:textColor="#112233"
                android:textSize="15sp" />
        </LinearLayout>
        <!-- Contact numéro 4 -->
        <LinearLayout
            android:id="@+id/LL4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">
            <FrameLayout
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:background="@color/white">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/ButContact4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/ImageViewContent"
                    android:src="@drawable/ic_baseline_settings_phone"
                    app:tint="?attr/colorPrimary"
                    app:backgroundTint="@color/blue_spot4"/>
            </FrameLayout>
            <TextView
                android:id="@+id/TexContact4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:adjustViewBounds="true"
                android:textAlignment="gravity"
                android:paddingHorizontal="15dp"
                android:paddingVertical="8dp"
                android:background="@color/white"
                android:text="@string/Contact4"
                android:textColor="#112233"
                android:textSize="15sp" />
        </LinearLayout>
        <!-- Contact numéro 5 -->
        <LinearLayout
            android:id="@+id/LL5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">
            <FrameLayout
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:background="@color/white">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/ButContact5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/ImageViewContent"
                    android:src="@drawable/ic_baseline_settings_phone"
                    app:tint="?attr/colorPrimary"
                    app:backgroundTint="@color/blue_spot4"/>
            </FrameLayout>
            <TextView
                android:id="@+id/TexContact5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:adjustViewBounds="true"
                android:textAlignment="gravity"
                android:paddingHorizontal="15dp"
                android:paddingVertical="8dp"
                android:background="@color/white"
                android:text="@string/Contact5"
                android:textColor="#112233"
                android:textSize="15sp" />
        </LinearLayout>
        <!-- Contact numéro 6 -->
        <LinearLayout
            android:id="@+id/LL6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">
            <FrameLayout
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:background="@color/white">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/ButContact6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/ImageViewContent"
                    android:src="@drawable/ic_baseline_settings_phone"
                    app:tint="?attr/colorPrimary"
                    app:backgroundTint="@color/blue_spot4"/>
            </FrameLayout>
            <TextView
                android:id="@+id/TexContact6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:adjustViewBounds="true"
                android:textAlignment="gravity"
                android:paddingHorizontal="15dp"
                android:paddingVertical="8dp"
                android:background="@color/white"
                android:text="@string/Contact6"
                android:textColor="#112233"
                android:textSize="15sp" />
        </LinearLayout>
        <!-- Contact numéro 7 -->
        <LinearLayout
            android:id="@+id/LL7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">
            <FrameLayout
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:background="@color/white">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/ButContact7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/ImageViewContent"
                    android:src="@drawable/ic_baseline_settings_phone"
                    app:tint="?attr/colorPrimary"
                    app:backgroundTint="@color/blue_spot4"/>
            </FrameLayout>
            <TextView
                android:id="@+id/TexContact7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:adjustViewBounds="true"
                android:textAlignment="gravity"
                android:paddingHorizontal="15dp"
                android:paddingVertical="8dp"
                android:background="@color/white"
                android:text="@string/Contact7"
                android:textColor="#112233"
                android:textSize="15sp" />
        </LinearLayout>
        <!-- Contact numéro 8 -->
        <LinearLayout
            android:id="@+id/LL8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">
            <FrameLayout
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:background="@color/white">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/ButContact8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/ImageViewContent"
                    android:src="@drawable/ic_baseline_settings_phone"
                    app:tint="?attr/colorPrimary"
                    app:backgroundTint="@color/blue_spot4"/>
            </FrameLayout>
            <TextView
                android:id="@+id/TexContact8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:adjustViewBounds="true"
                android:textAlignment="gravity"
                android:paddingHorizontal="15dp"
                android:paddingVertical="8dp"
                android:background="@color/white"
                android:text="@string/Contact8"
                android:textColor="#112233"
                android:textSize="15sp" />
        </LinearLayout>


        <!-- Marge de la fin du scroll -->
        <TextView
            android:id="@+id/TexTVfin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:adjustViewBounds="true"
            android:textAlignment="gravity"
            android:paddingHorizontal="5dp"
            android:paddingVertical="5dp" />
    </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/Notice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:gravity="bottom|end"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp"
        android:text="@string/Notice"
        android:textAlignment="gravity"
        android:textColor="@color/blue_harm2"
        android:textSize="15sp" />

</androidx.constraintlayout.widget.ConstraintLayout>